--- a/SabadBan/SabadBan/SymbolListHeader.xib
+++ b/SabadBan/SabadBan/SymbolListHeader.xib
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
@@ -11,54 +10,54 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="7tb-QM-oAn" customClass="SymbolListHeader" customModule="SabadBanDev" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="571" height="79"/>
+            <rect key="frame" x="0.0" y="0.0" width="571" height="92"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OEZ-DL-8iW">
-                    <rect key="frame" x="0.0" y="0.0" width="571" height="79"/>
+                    <rect key="frame" x="0.0" y="0.0" width="571" height="92"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="lblVolume" text="حجم" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LX3-in-ySQ">
-                            <rect key="frame" x="110" y="0.0" width="28" height="57"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" restorationIdentifier="lblSymbol" text="Symbol" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ipg-PT-9mx">
-                            <rect key="frame" x="505" y="0.0" width="58" height="57"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="imgSortName" image="ic_sort_aes" translatesAutoresizingMaskIntoConstraints="NO" id="kFY-vB-y25">
-                            <rect key="frame" x="481" y="0.0" width="24" height="57"/>
-                        </imageView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="imgSortAmount" image="ic_sort_aes" translatesAutoresizingMaskIntoConstraints="NO" id="9SI-U7-rbq">
-                            <rect key="frame" x="0.0" y="0.0" width="24" height="57"/>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="lblAmount" text="amount" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDa-BC-9GV">
-                            <rect key="frame" x="24" y="0.0" width="58" height="57"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="750" horizontalCompressionResistancePriority="200" verticalCompressionResistancePriority="250" text="Last Trade" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Oh-8J-rIN">
-                            <rect key="frame" x="146" y="0.0" width="327" height="57"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gOl-68-dol">
-                            <rect key="frame" x="0.0" y="58" width="571" height="21"/>
+                            <rect key="frame" x="0.0" y="0.0" width="571" height="25"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="571" id="W62-7r-K2G"/>
+                                <constraint firstAttribute="height" constant="25" id="uiO-gJ-pAi"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="lblVolume" text="حجم" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LX3-in-ySQ">
+                            <rect key="frame" x="110" y="27" width="28" height="65"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" restorationIdentifier="lblSymbol" text="Symbol" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ipg-PT-9mx">
+                            <rect key="frame" x="505" y="25" width="58" height="67"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="imgSortName" image="ic_sort_aes" translatesAutoresizingMaskIntoConstraints="NO" id="kFY-vB-y25">
+                            <rect key="frame" x="481" y="25" width="24" height="67"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="imgSortAmount" image="ic_sort_aes" translatesAutoresizingMaskIntoConstraints="NO" id="9SI-U7-rbq">
+                            <rect key="frame" x="0.0" y="25" width="24" height="67"/>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="lblAmount" text="amount" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDa-BC-9GV">
+                            <rect key="frame" x="24" y="25" width="58" height="67"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="750" horizontalCompressionResistancePriority="200" verticalCompressionResistancePriority="250" text="Last Trade" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Oh-8J-rIN">
+                            <rect key="frame" x="146" y="25" width="327" height="67"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="imgSortVolume" image="ic_sort_aes" translatesAutoresizingMaskIntoConstraints="NO" id="lg1-k5-QpQ">
-                            <rect key="frame" x="86" y="0.0" width="24" height="57"/>
+                            <rect key="frame" x="86" y="25" width="24" height="67"/>
                         </imageView>
                     </subviews>
                     <color key="backgroundColor" red="0.16452825090000001" green="0.21934768020000001" blue="0.31888299190000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -66,37 +65,39 @@
                         <constraint firstItem="kFY-vB-y25" firstAttribute="leading" secondItem="8Oh-8J-rIN" secondAttribute="trailing" constant="8" symbolic="YES" id="05F-Jp-PSE">
                             <variation key="heightClass=regular-widthClass=regular" constant="123"/>
                         </constraint>
-                        <constraint firstAttribute="bottom" secondItem="9SI-U7-rbq" secondAttribute="bottom" constant="22" id="0li-io-b2S"/>
+                        <constraint firstAttribute="bottom" secondItem="9SI-U7-rbq" secondAttribute="bottom" id="0li-io-b2S"/>
                         <constraint firstItem="ipg-PT-9mx" firstAttribute="trailing" secondItem="OEZ-DL-8iW" secondAttribute="trailingMargin" id="1PT-XD-Mva"/>
+                        <constraint firstItem="gOl-68-dol" firstAttribute="top" secondItem="OEZ-DL-8iW" secondAttribute="top" id="5Yo-rw-75Z"/>
+                        <constraint firstItem="kFY-vB-y25" firstAttribute="top" secondItem="gOl-68-dol" secondAttribute="bottom" id="5fo-3Y-bNz"/>
+                        <constraint firstAttribute="bottom" secondItem="XDa-BC-9GV" secondAttribute="bottom" id="8Uh-qz-LzZ"/>
                         <constraint firstItem="LX3-in-ySQ" firstAttribute="leading" secondItem="lg1-k5-QpQ" secondAttribute="trailing" id="8hp-Tt-b5h"/>
                         <constraint firstItem="ipg-PT-9mx" firstAttribute="leading" secondItem="kFY-vB-y25" secondAttribute="trailing" id="9Zm-M9-gQ5"/>
-                        <constraint firstItem="lg1-k5-QpQ" firstAttribute="bottom" secondItem="LX3-in-ySQ" secondAttribute="bottom" id="CCh-VV-jD9"/>
-                        <constraint firstItem="kFY-vB-y25" firstAttribute="bottom" secondItem="ipg-PT-9mx" secondAttribute="bottom" id="EAR-jq-v1W"/>
                         <constraint firstItem="XDa-BC-9GV" firstAttribute="leading" secondItem="OEZ-DL-8iW" secondAttribute="leading" constant="8" id="EVg-gW-yiF"/>
-                        <constraint firstItem="lg1-k5-QpQ" firstAttribute="top" secondItem="LX3-in-ySQ" secondAttribute="top" id="HqQ-8B-G5a"/>
-                        <constraint firstItem="8Oh-8J-rIN" firstAttribute="firstBaseline" secondItem="ipg-PT-9mx" secondAttribute="firstBaseline" id="IHz-Aa-le5"/>
-                        <constraint firstAttribute="bottom" secondItem="gOl-68-dol" secondAttribute="bottom" id="M7y-Qa-cYW"/>
-                        <constraint firstItem="XDa-BC-9GV" firstAttribute="baseline" secondItem="LX3-in-ySQ" secondAttribute="baseline" id="NOh-fK-igy"/>
+                        <constraint firstItem="lg1-k5-QpQ" firstAttribute="top" secondItem="gOl-68-dol" secondAttribute="bottom" id="GsV-dR-v5M"/>
+                        <constraint firstAttribute="bottom" secondItem="8Oh-8J-rIN" secondAttribute="bottom" id="LkG-KM-eFN"/>
+                        <constraint firstItem="LX3-in-ySQ" firstAttribute="top" secondItem="gOl-68-dol" secondAttribute="bottom" constant="2" id="ObN-3t-HCQ"/>
+                        <constraint firstAttribute="bottom" secondItem="ipg-PT-9mx" secondAttribute="bottom" id="OnZ-6K-gyS"/>
                         <constraint firstItem="gOl-68-dol" firstAttribute="centerX" secondItem="OEZ-DL-8iW" secondAttribute="centerX" id="PUW-yf-Ydu"/>
-                        <constraint firstItem="XDa-BC-9GV" firstAttribute="firstBaseline" secondItem="LX3-in-ySQ" secondAttribute="firstBaseline" id="Pvk-ga-TSI"/>
-                        <constraint firstItem="8Oh-8J-rIN" firstAttribute="baseline" secondItem="ipg-PT-9mx" secondAttribute="baseline" id="WwG-6m-EsY"/>
-                        <constraint firstItem="9SI-U7-rbq" firstAttribute="bottom" secondItem="XDa-BC-9GV" secondAttribute="bottom" id="Y9o-4t-R9i"/>
+                        <constraint firstAttribute="bottom" secondItem="LX3-in-ySQ" secondAttribute="bottom" id="TBX-Ug-Rds"/>
+                        <constraint firstItem="8Oh-8J-rIN" firstAttribute="top" secondItem="gOl-68-dol" secondAttribute="bottom" id="XWA-aG-59v"/>
                         <constraint firstItem="kFY-vB-y25" firstAttribute="leading" secondItem="8Oh-8J-rIN" secondAttribute="trailing" constant="25" id="b3t-PD-ZPN"/>
+                        <constraint firstAttribute="bottom" secondItem="lg1-k5-QpQ" secondAttribute="bottom" id="bGn-2b-iHk"/>
                         <constraint firstItem="XDa-BC-9GV" firstAttribute="leading" secondItem="9SI-U7-rbq" secondAttribute="trailing" id="bd8-Ur-uWA"/>
                         <constraint firstItem="8Oh-8J-rIN" firstAttribute="leading" secondItem="LX3-in-ySQ" secondAttribute="trailing" constant="8" symbolic="YES" id="bfV-bM-J9U">
                             <variation key="heightClass=regular-widthClass=regular" constant="32"/>
                         </constraint>
+                        <constraint firstItem="9SI-U7-rbq" firstAttribute="top" secondItem="gOl-68-dol" secondAttribute="bottom" id="bu2-kd-A3f"/>
                         <constraint firstItem="XDa-BC-9GV" firstAttribute="leading" secondItem="9SI-U7-rbq" secondAttribute="trailing" id="cMx-wF-Lo6"/>
-                        <constraint firstItem="9SI-U7-rbq" firstAttribute="top" secondItem="OEZ-DL-8iW" secondAttribute="top" id="cjO-FU-w8C"/>
                         <constraint firstItem="LX3-in-ySQ" firstAttribute="leading" secondItem="OEZ-DL-8iW" secondAttribute="leading" constant="82" id="cua-hZ-joJ"/>
-                        <constraint firstItem="LX3-in-ySQ" firstAttribute="baseline" secondItem="8Oh-8J-rIN" secondAttribute="baseline" id="hFL-8m-qcf"/>
                         <constraint firstItem="8Oh-8J-rIN" firstAttribute="width" secondItem="OEZ-DL-8iW" secondAttribute="width" multiplier="0.23" id="ilm-bN-mbe"/>
-                        <constraint firstItem="9SI-U7-rbq" firstAttribute="top" secondItem="XDa-BC-9GV" secondAttribute="top" id="q5Y-9h-kBD"/>
-                        <constraint firstItem="LX3-in-ySQ" firstAttribute="firstBaseline" secondItem="8Oh-8J-rIN" secondAttribute="firstBaseline" id="sAM-XD-pE2"/>
+                        <constraint firstAttribute="bottom" secondItem="kFY-vB-y25" secondAttribute="bottom" id="j0w-yx-rxl"/>
+                        <constraint firstItem="ipg-PT-9mx" firstAttribute="top" secondItem="gOl-68-dol" secondAttribute="bottom" id="jdt-Sd-htB"/>
+                        <constraint firstItem="gOl-68-dol" firstAttribute="width" secondItem="OEZ-DL-8iW" secondAttribute="width" id="qUo-wO-osa"/>
                         <constraint firstItem="9SI-U7-rbq" firstAttribute="leading" secondItem="OEZ-DL-8iW" secondAttribute="leading" id="shL-ZX-cQI"/>
                         <constraint firstItem="lg1-k5-QpQ" firstAttribute="leading" secondItem="XDa-BC-9GV" secondAttribute="trailing" constant="4" id="uf9-Z3-sUZ">
                             <variation key="heightClass=regular-widthClass=regular" constant="47"/>
                         </constraint>
+                        <constraint firstItem="XDa-BC-9GV" firstAttribute="top" secondItem="gOl-68-dol" secondAttribute="bottom" id="wuE-dj-0ku"/>
                         <constraint firstItem="kFY-vB-y25" firstAttribute="top" secondItem="ipg-PT-9mx" secondAttribute="top" id="zHx-v6-H2H"/>
                     </constraints>
                     <variation key="default">
@@ -128,7 +129,7 @@
                 <outlet property="lblName" destination="ipg-PT-9mx" id="2db-aN-UxE"/>
                 <outlet property="lblVolume" destination="LX3-in-ySQ" id="Wgs-yc-sid"/>
             </connections>
-            <point key="canvasLocation" x="405.5" y="187.5"/>
+            <point key="canvasLocation" x="405.5" y="194"/>
         </view>
     </objects>
     <resources>
